# RIFT2-multimodal-matching-rotation

./: .gitignore  README.md  benchmark_rift2.py  demo_rift2.py  pyproject.toml
rift2/: __init__.py  _cuda.py  _descriptor_kernel.py  _orientation_kernel.py  descriptor.py  detector.py  fsc.py  matcher.py  orientation.py  phase_congruency.py  rift2.py  utils.py
