[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rift2"
version = "0.1.0"
description = "RIFT2: Radiation-variation Insensitive Feature Transform (v2) for multimodal image matching"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RIFT2 Python port contributors" }]
keywords = [
    "image-matching",
    "multimodal",
    "phase-congruency",
    "rift",
    "rift2",
    "computer-vision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.21",
    "opencv-python>=4.5",
    "scipy>=1.7",
]

[project.optional-dependencies]
demo = ["matplotlib>=3.3"]
jit = ["numba>=0.57"]
cuda11 = ["cupy-cuda11x>=12.0"]
cuda12 = ["cupy-cuda12x>=12.0"]

[project.urls]
Homepage = "https://github.com/ljy-rs/rift2-multimodal-matching-rotation"
Paper = "https://arxiv.org/abs/2303.00319"

[tool.setuptools.packages.find]
include = ["rift2*"]
